# application/controllers/Documents.php
@@ -364,4 +364,40 @@ class Documents extends REST_Controller
             $this->response($message, REST_Controller::HTTP_UNAUTHORIZED);
         }
     }
+
+    public function mydocs_get()
+    {
+        $headers = $this->input->request_headers(); 
+        if (isset($headers['Authorization'])) 
+        {
+            $decodedToken = $this->authorization_token->validateToken($headers['Authorization']);
+            if ($decodedToken['status'])
+            {
+                $data = $this->documents_model->get_emp_docs($this->userdetails->EmployeeID);
+
+                if($data)
+                {
+                    $message = array('results' => $data);
+                    $message['status'] = true;
+                    $this->response($message, REST_Controller::HTTP_OK);
+                }
+                else{ 
+                    $message = array('message' => 'Something went wrong!.');
+                    $message['status'] = false;
+                    $this->response($message, REST_Controller::HTTP_OK);
+                }
+            }
+            else
+            {
+                $this->response($decodedToken);
+            }
+
+        }
+        else 
+        {
+            $message = array('message' => 'Authentication failed');
+            $message['status'] = false;
+            $this->response($message, REST_Controller::HTTP_UNAUTHORIZED);
+        }
+    }
 }
