# application/models/Documents_model.php
@@ -37,4 +37,13 @@ class Documents_model extends CI_Model {
         else
             return false;
     }
+
+    public function get_emp_docs($empid)
+    {
+        $sql = "SELECT dt.name as doctype, Document_ID,Doc_name,Doc_path FROM mcts_extranet.`dbo.documents` d
+                LEFT JOIN mcts_extranet.`dbo.documenttypes` dt ON d.Doc_type=dt.id
+                WHERE EmployeeID='$empid'";
+        $query=$this->db->query($sql);
+		return $query->result();
+    }
 }
